--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ChatApp</string>
+    <string name="app_name">MeowGPT</string>
+    <string name="send_button">Send</string>
 </resources>
